# RuVector

./: .gitignore  Cargo.toml  METAHARNESS-README.md  deny.toml  package.json
.github/workflows/: build-attention.yml  build-gnn.yml  build-tiny-dancer.yml  ci.yml  clippy-fmt.yml  metabiohacker-ci.yml  publish-all.yml  regression-guard.yml  release.yml  ruvector-npm-ci.yml  ruvector-postgres-ci.yml  sona-napi.yml  sota-benchmark.yml  supply-chain.yml  upstream-sync.yml  wasm-dedup-check.yml
crates/emergent-time-wasm/: Cargo.toml
crates/emergent-time-wasm/src/: lib.rs
crates/emergent-time-wasm/tests/: smoke.mjs  usage.ts
crates/photonlayer-wasm/src/: lib.rs
crates/ruvector-agent-memory/: Cargo.toml
crates/ruvector-agent-memory/src/: compaction.rs  lib.rs  main.rs  memory.rs  scoring.rs
crates/ruvector-bet4-ivf-bench/: Cargo.toml
crates/ruvector-bet4-ivf-bench/examples/: ivf_pruning_sweep.rs  pq_pruning_sweep.rs
crates/ruvector-bet4-ivf-bench/src/: data.rs  kernel.rs  lib.rs  oracle.rs  pca.rs  pq.rs
crates/ruvector-bet4-ivf-bench/tests/: oracle_gate.rs  pq_gate.rs
crates/ruvector-capgated/: README.md
crates/ruvector-cli/src/: mcp_server.rs
crates/ruvector-coherence-hnsw/src/: graph.rs
crates/ruvector-core/: Cargo.toml
crates/ruvector-core/examples/: lattice_embedding_example.rs
crates/ruvector-core/src/: embeddings.rs  integration.rs  lib.rs  simd_intrinsics.rs  types.rs
crates/ruvector-core/src/index/: flat.rs  hnsw.rs
crates/ruvector-core/tests/: hnsw_integration_test.rs
crates/ruvector-diskann/: Cargo.toml
crates/ruvector-diskann/src/: lib.rs  reuse.rs
crates/ruvector-gnn/: Cargo.toml
crates/ruvector-gnn-node/: package.json
crates/ruvector-gnn-rerank/src/: main.rs
crates/ruvector-gnn/examples/: diskann_real_trajectory.rs  triggered_rebuild.rs
crates/ruvector-graph/benches/: typed_graph_bench.rs
crates/ruvector-lsm-ann/: Cargo.toml  README.md  build.rs
crates/ruvector-lsm-ann/src/: lib.rs  lsm.rs  memtable.rs  segment.rs
crates/ruvector-matryoshka/: Cargo.toml  README.md
crates/ruvector-pq-search/: Cargo.toml  README.md
crates/ruvector-proof-gate/: Cargo.toml  README.md
crates/ruvector-proof-gate/examples/: benchmark.rs
crates/ruvector-proof-gate/src/: gate.rs  lib.rs  payload.rs
crates/ruvector-proof-gate/tests/: perf_benchmark.rs  tamper_evidence.rs
crates/ruvector-sota-bench/: Cargo.toml  README.md
crates/ruvector-sota-bench/harness/: scorePolicy.ts
crates/ruvector-sota-bench/src/: lib.rs  metrics.rs  report.rs
crates/ruvector-sota-bench/src/datasets/: ann_benchmarks.rs  mod.rs  synthetic.rs
crates/ruvector-sota-bench/src/runners/: core_hnsw.rs  hybrid.rs  lsm_ann.rs  matryoshka.rs  mod.rs  mteb.rs  rabitq.rs  vdbbench.rs
crates/ruvector-timesfm/: Cargo.toml  README.md
crates/ruvector-timesfm/examples/: telemetry_anomaly.rs  throughput.rs
crates/ruvector-timesfm/src/: anomaly.rs  forecast_types.rs  forecaster.rs  lib.rs  rebuild.rs  sweep.rs
crates/ruvector-timesfm/tests/: integration.rs
crates/ruvector-wasm/: README.md  package.json
crates/ruvllm/: .reasoning_bank_patterns  Cargo.toml  README.md
crates/ruvllm/benches/: recurrent_depth_bench.rs
crates/ruvllm/examples/: lattice_bench.rs
crates/ruvllm/src/: lib.rs
crates/ruvllm/src/backends/: candle_backend.rs  lattice_backend.rs  mod.rs  recurrent_backend.rs
crates/ruvllm/src/models/: mod.rs  rdt.rs  sampling.rs
crates/ruvllm/src/models/openmythos/: act_kernel.rs  attention.rs  block.rs  config.rs  ffn.rs  mod.rs  recurrent.rs  rope.rs
crates/rvm/: Cargo.toml
crates/rvm/crates/rvm-checkpoint/: Cargo.toml
crates/rvm/crates/rvm-checkpoint/src/: base64.rs  checkpoint.rs  lib.rs  note.rs
crates/rvm/crates/rvm-checkpoint/tests/: spec_compat.rs  unit.rs
crates/sona/: Cargo.toml
crates/sona/examples/: darwin_autotuner.rs  darwin_ewc.rs  darwin_router.rs  darwin_weightadapter.rs
crates/sona/src/: auto_tuner.rs  darwin_guard.rs  engine.rs  lib.rs  types.rs  wasm.rs
crates/sona/src/training/: federated.rs
crates/sonic-ct/: Cargo.toml  README.md
crates/sonic-ct-wasm/: Cargo.toml
crates/sonic-ct-wasm/src/: lib.rs
crates/sonic-ct/src/: acquisition.rs  butterfly.rs  fwi.rs  geometry.rs  grid.rs  lib.rs  memory.rs  metrics.rs  model.rs  organ.rs  phantom.rs  pipeline.rs  ray.rs  reconstruction.rs  segmentation.rs  shepp_logan.rs  types.rs  volume3d.rs
crates/sonic-ct/tests/: fwi.rs  integration.rs
crates/timesfm/: Cargo.toml  README.md
crates/timesfm/examples/: bench.rs  bench24.rs  parity.rs  predictive_prune.rs  quant_bench.rs
crates/timesfm/scripts/: convert_weights.py  gen_reference.py
crates/timesfm/src/: config.rs  lib.rs  model.rs  prune.rs
crates/timesfm/tests/: parity.rs  prune.rs
docs/: METAHARNESS-ARCHITECTURE-SUMMARY.md  metaharness-implementation-plan.md
docs/adr/: ADR-194-proof-gated-writes.md  ADR-202-reuse-under-drift-real-gnn-trajectory.md  ADR-205-region-pruned-ivf-vs-plain-ivf-nprobe.md  ADR-206-pq-ivfadc-within-list-pruning-vs-plain-ivf-nprobe.md  ADR-210-default-on-semantic-embeddings-minilm.md  ADR-258-ruvllm-rdt-gpu-optimization.md  ADR-259-ruvllm-darwin-mode-local-mutator.md  ADR-260-darwin-mode-metaharness-integration.md  ADR-264-lsm-ann.md  ADR-265-ruvector-comprehensive-benchmark-suite.md  ADR-266-metaharness-darwin-ann-optimization.md  ADR-266-metaharness-darwin-integration.md  ADR-267-sota-validation-protocol.md  ADR-271-metaharness-darwin-sona-self-improvement.md
docs/decisions/: ADR-151-stateful-pty-agent.md
docs/evidence/: acoustic-usct.md  eeg-timing.md  ekg-timing.md  mri-prior.md  pathology-review.md
docs/sonic-ct/: BENCHMARK.md  BODY-MODELS.md  MARKET-BRIEF.md  METHOD-BENCHMARK.md  OPTIMIZATION.md  RESEARCH-MAP.md  SPARC.md
examples/sonic-ct/: .gitignore  benchmark.mjs  index.html  optimize.mjs  package.json  probeDarwin.mjs  vite.config.js
fixtures/lattice-embed/: query-prefixes.json
harnesses/timesfm-harness/: CLAUDE.md  LICENSE  PROVENANCE.md  README.md  package.json  tsconfig.json  vitest.config.ts
scripts/: build-sonic-ct-wasm.sh  sift1m_hnswlib_bench.mjs
(+109 files in other folders)
