# Standalone (workspace-excluded) cdylib so it can carry its own size-optimized
# `[profile.release]` (opt-level="z") and `crate-type=["cdylib"]` without
# affecting the parent workspace's opt-level=3 native profile. Mirrors the
# crates/rvf/rvf-wasm convention.
[package]
name = "emergent-time-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the agentic-time layer of the emergent-time crate: measure an AI agent's internal time and health from state deltas in the browser, on the edge, or in Node."
license = "MIT"
authors = ["Ruvector Team"]
repository = "https://github.com/ruvnet/ruvector"
homepage = "https://github.com/ruvnet/ruvector"
readme = "README.md"
rust-version = "1.77"
categories = ["wasm", "science", "simulation"]
keywords = ["agentic-time", "wasm", "webassembly", "agents", "observability"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The pure, dependency-free core. Only the agentic-time layer is wrapped.
emergent-time = { path = "../emergent-time" }
# Pinned to match the installed `wasm-bindgen` CLI (0.2.118) so the generated JS
# glue ABI matches exactly and there is no CLI/crate version-skew warning.
wasm-bindgen = "=0.2.118"
# Tiny allocator: ~10x smaller than the default for small wasm modules.
dlmalloc = { version = "0.2", features = ["global"] }

# Size-optimized release profile (mirrors crates/rvf/rvf-wasm).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
