[package]
name = "ruvector-lsm-ann"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LSM-ANN: write-optimized streaming vector index with multi-tier compaction for agent memory"
readme = "README.md"
keywords = ["vector-search", "ann", "lsm-tree", "streaming", "agent-memory"]
categories = ["algorithms", "data-structures", "science"]

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[features]
default = []

[dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
