[package]
name = "ruvector-timesfm"
# Tracks timesfm 2.2.4 (the version carrying the APIs this crate uses).
version = "2.2.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RuVector integration for the TimesFM time-series foundation model: a high-level quantile Forecaster, forecast-band anomaly detection, and TimesFM-driven early-stopping for optimization sweeps (ADR-191)"
keywords = ["timesfm", "forecasting", "time-series", "anomaly", "ruvector"]
categories = ["science", "algorithms"]
readme = "README.md"
publish = true

[lib]
name = "ruvector_timesfm"
path = "src/lib.rs"

# The forecast CLI (MCP `time_series_forecast` tool entry point) needs the
# numeric path, so it only builds with the candle feature.
[[bin]]
name = "ruvector-timesfm-forecast"
path = "src/bin/forecast.rs"
required-features = ["candle"]

[[example]]
name = "telemetry_anomaly"
required-features = ["candle"]

[[example]]
name = "throughput"
required-features = ["candle"]

[features]
default = []
# Activates the numeric path (TimesFM candle inference). Off by default so a
# stock `cargo build --workspace` stays light, mirroring the `timesfm` crate.
candle = ["timesfm/candle", "dep:candle-core", "dep:candle-nn"]
cuda = ["candle", "timesfm/cuda", "candle-core/cuda", "candle-nn/cuda"]
metal = ["candle", "timesfm/metal", "candle-core/metal", "candle-nn/metal"]

[dependencies]
timesfm = { path = "../timesfm", version = "2.2.4" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Only needed for the numeric path (Device/Tensor + VarBuilder at the boundary).
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }

[dev-dependencies]
anyhow = { workspace = true }

# Research-tier crate, doc/style churn deferred — mirror timesfm's lint posture.
[lints.rust]
unexpected_cfgs = { level = "allow", priority = -1 }

[lints.clippy]
pedantic = { level = "allow", priority = -2 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
too_many_arguments = "allow"
needless_range_loop = "allow"
